# h264-roi

./: .gitignore  .gitmodules  CMakeLists.txt  CTestConfig.cmake  Doxyfile.in  H264-ROI.pro  LibChaos Todo and Ideas.txt  LibChaos.pri  LibChaos.pro  Projects.txt  README  README.txt  asar.h  asar.tpp  configure_build.cmake  database.cpp  database.h  git.videolan.org Git - x264.gitcommitdiff.URL  hash.sh  libchaos-main.cpp  main.cpp  main.h  notes.txt  roi.bat  roi.sh  source_hash.cmake  todo.txt  zarray.h  zarray.tpp  zarray2.h  zassoc.h  zautobufferunit.h  zbinary.cpp  zbinary.h  zerror.cpp  zerror.h  zfile.cpp  zfile.h  zh264decoder.cpp  zh264decoder.h  (+19 more)
bbb/: CMakeLists.txt  zbbb.h
chaos/: CMakeLists.txt  database.h  zaddress.cpp  zaddress.h  zarray.h  zarray2.h  zassoc.h  zassoc2.h  zautobuffer.cpp  zautobuffer.h  zautobufferunit.h  zbinary.cpp  zbinary.h  zclock.h  zerror.cpp  zerror.h  zfile.cpp  zfile.h  zjson.cpp  zjson.h  zlog.cpp  zlog.h  zlogworker.cpp  zlogworker.h  zmutex.h  zpath.cpp  zpath.h  zret.h  zsocket.cpp  zsocket.h  zstring.cpp  zstring.h  zthread.h  ztime.cpp  ztypes.h  zxml.h
chaos/abstract/: yindexedaccess.h  yiterable.h  ylinearaccess.h  ypushpopaccess.h  zaccessor.h  zbase.h  zhashable.h  ziterable.h  ziterator.h  ziteratoraccessor.h  zposition.h  zreader.h  zserializer.h  zstorage.h  zwriter.h
chaos/base/: zclock.cpp  zclock.h  zerror.cpp  zerror.h  zerror_min.h  zexception.cpp  zexception.h  ziterator.h  zlog.cpp  zlog.h  zlogworker.cpp  zlogworker.h  zpath.cpp  zpath.h  zstring.cpp  zstring.h  zstring_encode.cpp  ztime.cpp  ztime.h  zuid.cpp
chaos/data/: zallocator.h  zarray.h  zarray2.h  zassoc.h  zassoc2.h  zautobuffer.h  zbinary.cpp  zbinary.h  zdata.h  zdefaultstorage.h  zfilestorage.h  zgraph.h  zjson.cpp  zjson.h  zlist.h  zmap.h  znumber.h  zpath.cpp  zpath.h  zpointer.h  zqueue.h  zset.h  zstack.h  zstorage.h  zstring.cpp  zstring.h  zstring_encode.cpp  ztable.cpp  ztable.h
chaos/file/: database.h  yimagebackend.h  zbitmap.h  zbmp.cpp  zbmp.h  zdatabase.cpp  zdatabase.h  zfile.cpp  zfile.h  zimage.cpp  zimage.h  zjpeg.cpp  zjpeg.h  zoptions.cpp  zoptions.h  zpdf.cpp  zpdf.h  zpng.cpp  zpng.h  zppm.cpp  zppm.h  zsettings.cpp  zsettings.h
chaos/file/image/: zbmp.cpp  zbmp.h  zjpeg.cpp  zjpeg.h  zpng.cpp  zpng.h  zppm.cpp  zppm.h  zwebp.cpp  zwebp.h
chaos/lib/fnv-5.0.3/: fnv.h  hash_64a.c
chaos/lib/libexip/: EXIParser.h  errorHandle.h  exipConfig.h  grammarGenerator.h
chaos/lib/libpng-1.2.37/: CMakeLists.txt
chaos/lib/zlib-1.2.8/: CMakeLists.txt
chaos/math/: zexpression.cpp  zexpression.h  zformula.cpp  zformula.h  zmath.cpp  zmath.h  znumber.cpp  znumber.h
chaos/misc/: zautobuffer.cpp  zautobuffer.h  zautobufferunit.h  zencrypt.cpp  zencrypt.h  zhash.cpp  zhash.h  zmisc.cpp  zmisc.h  zoptions.cpp  zoptions.h  zrandom.cpp  zrandom.h  zret.h  zuid.cpp  zuid.h
chaos/net/: zaddress.cpp  zaddress.h  zconnection.cpp  zconnection.h  zdatagramsocket.cpp  zdatagramsocket.h  zsocket.cpp  zsocket.h  zstreamconnection.cpp  zstreamconnection.h  zstreamsocket.cpp  zstreamsocket.h
chaos/string/: zjson.cpp  zjson.h  zpath.cpp  zpath.h  zstring-encode.cpp  zstring-unicode.cpp  zstring.cpp  zstring.h  zxml.cpp  zxml.h
chaos/thread/: zcondition.cpp  zcondition.h  zlock.cpp  zlock.h  zmutex.cpp  zmutex.h  zthread.cpp  zthread.h  zworkqueue.h
cmake/: ConfigureBuild.cmake  ConfigureTarget.cmake  Doxygen.cmake  FindHTMLHelp.cmake  FindLibs.cmake  Options.cmake  Tests.cmake  Utils.cmake  configure_build.cmake
doc/: COPYRIGHT  Doxyfile-chm.in  Doxyfile-help.in  Doxyfile.in  LibChaos_Todo_Ideas.txt  Projects.txt  README.md  README.txt  ZParcel.txt
lib/: sqlite3.h
lib/libexip/: EXISerializer.h
libchaos/: .gitignore  CMakeLists.txt  LibChaos.pri  LibChaos.pro  LibChaos_Todo_Ideas.txt  configure_build.cmake
libchaos2/: CMakeLists.txt  LibChaos.pri
roxlu/: H264_Decoder.cpp  H264_Decoder.h  Utils.cpp  Utils.h  X264Encoder.cpp  X264Encoder.h  X264EncoderThreaded.cpp  X264EncoderThreaded.h  YUV420P.cpp  YUV420P.h  dirent.h  main.h  tinylib-2.h  tinylib.h
src/: zarray.h  zmap.h  zstring.h
test/: CMakeLists.txt  allocator_test.cpp  array_test.cpp  autobuffer_test.cpp  binary_test.cpp  error_test.cpp  file_test.cpp  graph_test.cpp  hash_test.cpp  image_test.cpp  iterator_test.cpp  json_test.cpp  libchaos-main.cpp  libchaos_main.cpp  list_test.cpp  main.cpp  misc_test.cpp  number_test.cpp  path_test.cpp  pdf_test.cpp  png_test.cpp  pointer_test.cpp  sandbox.cpp  socket2_test.cpp  socket_test.cpp  storage_test.cpp  string_test.cpp  test.cpp  test.h  test_array.cpp  test_binary.cpp  test_file.cpp  test_hash.cpp  test_image.cpp  test_iterator.cpp  test_json.cpp  test_list.cpp  test_misc.cpp  test_number.cpp  test_path.cpp  (+7 more)
tests/: CMakeLists.txt  main.cpp  sandbox.cpp  test_allocator.cpp  test_error.cpp  test_file.cpp  test_graph.cpp  test_hash.cpp  test_misc.cpp  test_pointer.cpp  test_socket.cpp  test_storage.cpp  test_string.cpp  test_table.cpp  test_thread.cpp  tests.h
ui/: CMakeLists.txt  LibChaosUI.pri  align.cpp  base.h  button.cpp  button.h  control.cpp  control.h  edit.cpp  edit.h  font.cpp  font.h  progress.cpp  table.cpp  table.h  window.cpp  window.h  windowproc.cpp  zui.h
ui/win32/: button_win32.cpp  control_win32.cpp  edit_win32.cpp  font_win32.cpp  progress_win32.cpp  table_win32.cpp  window_win32.cpp  windowproc_win32.cpp
util/: CMakeLists.txt  audiobooksorter.cpp  imagedownloader.cpp  imagelibrarymanager.cpp  imagereversesearch.cpp
util/imagedownloader/: .gitignore  .htaccess  save-bookmark.txt  save.js  save.php
utils/: CMakeLists.txt  audiobooksorter.cpp  duplicatefinder.cpp  extensionfixer.cpp  imagedownloader.cpp  imagelibrarymanager.cpp  imagereversesearch.cpp
zparcel/: CMakeLists.txt  ZParcel.pri  auto.cpp  main.cpp  main.h  manual.cpp  parcel-main.cpp  parcel-main.h  zparcel-parser.h  zparcel.cpp  zparcel.h  zparcel4-parser.cpp  zparcel4-parser.h  zparcel4page.cpp  zparcel4page.h  zparcel4parser.cpp  zparcel4parser.h  zparcelconvert.cpp  zparcelconvert.h  zparcelrecord.cpp  zparcelrecord.h  zparceltypes.h
(+108 files in other folders)
